--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,24 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation 'com.synsys.org.apache.spark:spark:1.0.0'
-    implementation 'org.apache.spark:spark-streaming_2.10'
-    implementation 'org.apache.spark:spark-sql_2.12:2.4.6'
+//    implementation 'com.synsys.org.apache.spark:spark:1.0.0'
+//    implementation 'org.apache.spark:spark-streaming_2.10'
+    implementation ('org.apache.spark:spark-sql_2.12:2.4.6') {
+        exclude group : "org.slf4j", module : "slf4j-log4j12"
+    }
 //    implementation 'org.mongodb.spark:mongo-spark-connector_2.12:3.0.0'
 
     implementation group: 'org.apache.spark', name: 'spark-streaming_2.10', version: '1.5.0'
     implementation group: 'org.apache.spark', name: 'spark-streaming-kafka-0-8_2.11', version: '2.4.0'
-    implementation "com.sparkjava:spark-kotlin:1.0.0-alpha"
-    implementation "com.sparkjava:spark-core:2.9.4"
+//    implementation "com.sparkjava:spark-kotlin:1.0.0-alpha"
+    implementation ("com.sparkjava:spark-core:2.9.4"){
+
+        exclude group:"javax.servlet", module: "javax.servlet-api"
+        exclude group: "org.glassfish",module: "javax.servlet"
+        exclude group:"org.eclipse.jetty.orbit",module:"javax.servlet"
+
+
+    }
 }
 
 test {
